# nbweb

./: README.md  pyproject.toml  tox.ini
devscripts/: test_extractor.py
src/nbweb/: app.py  cli.py  convert.py  data.json  page.py  parser.py  utils.py
src/nbweb/extractor/: __init__.py  _extractors.py  common.py  extractors.py  otv.py  techspot.py
tests/: test_page.py  test_parser.py  test_utils.py
