[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nbweb"
version = "0.0.1"
authors = [
    { name="Subrat Lima", email="subrat.k.lima@protonmail.com" }
]
description = "an application to simplify web data"
readme = "README.md"
dependencies = ["httpx", "parsel"]
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/subrat-lima/nbweb"
Issues = "https://github.com/subrat-lima/nbweb/issues"

[tool.setup.packages.find]
where = ["src"]
