[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nbweb"
dynamic = ["version"]
authors = [
    { name="Subrat Lima", email="subrat.k.lima@protonmail.com" }
]
description = "A simple tool to extract data from websites"
readme = "README.md"
dependencies = ["httpx>=0.27.2", "parsel>=1.8.1", "fake-useragent>=1.5.1"]
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.3",
    "tox>=4.18.0",
]

[tool.setuptools.dynamic]
version = {attr = "nbweb.__VERSION__"}

[project.urls]
Homepage = "https://github.com/subrat-lima/nbweb"
Issues = "https://github.com/subrat-lima/nbweb/issues"

[project.scripts]
nbweb = "nbweb.cli:cli"

[tool.ruff.lint]
extend-select = ["I"]
